@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-Plugin-Babble
 
 {{$NEXT}}
           - Also munge test files
+          - Allow for extra or filtered plugins
 
 0.003     2022-12-01 22:05:34+01:00 Europe/Amsterdam
           - Add support for Ellipsis, ::PackageBlock, & ::PackageVersion
